(fs) Two-arg UnixFileAttributes.getIfExists should not use exception for control flow

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: core-libs
    • b13
    • generic
    • linux, os_x

      The new method sun.nio.fs.UnixFileAttributes.getIfExists(UnixPath,boolean) uses UnixException for control flow, unlike the one-arg version. This should be not to se use the exception and the one-arg version modified to call the two-arg version.

            Assignee:
            Brian Burkhalter
            Reporter:
            Brian Burkhalter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: