8365807: (fs) Two-arg UnixFileAttributes.getIfExists should not use exception for control flow